Update css to prevent double stack
- when the size of the play area is too big, cards start to stack on 2 columns instead of 1.
- center the play area

--- a/css/FreecellJS.css
+++ b/css/FreecellJS.css
@@ -213,7 +213,13 @@ button.coolBtn.small {
 
 /* --------------------------------------------------------------------------------------------- */
 
-#playArea { padding:30px 60px; }
+#playArea {
+	padding:30px 60px; 
+   	max-width: 1500px;
+    	left: 50%;
+    	position: relative;
+    	transform: translate(-50%, 0%);
+}
 #playArea > div { width: 100%; }
 
 /* ---------- Top Area ---------- */
